# axum-libsql-ecommerce-service

./: .env.sample  .gitignore  Cargo.toml  drizzle.config.ts  package-lock.json  package.json
db/: schema.ts
db/migrations/meta/: 0000_snapshot.json  _journal.json
src/: db.rs  main.rs  rest.rs
